...
                view?.updateAvatar()
            }
    }
    
    func makeAlert() -> UIAlertController {
        let alert = UIAlertController(
            title: "Пока, пока",
            message: "Уверены, что хотите выйти?",
            preferredStyle: .alert
        )
        alert.addAction(UIAlertAction(title: "Да", style: .default, handler: { [weak self] action in
            guard let self = self else { return }
            logout()
        }))
        alert.addAction(UIAlertAction(title: "Нет", style: .cancel, handler: nil))
        alert.dismiss(animated: true)
        return alert
...
